fixed image size on mobile

--- a/src/Sass/About/About.scss
+++ b/src/Sass/About/About.scss
@@ -14,7 +14,7 @@
   justify-content: space-between;
 }
 .aboutImage {
-  width: 100px;
+  width: 50px !important;
   @include breakPoint {
     width: 300px;
   }
